syntax = "proto3";
package ncs.server;
option go_package = "grpc";

import "google/api/annotations.proto";

// Base

message Info {
    int32 server_id = 1;
    int32 mod_id = 2;
    int32 game_id = 3;
    string rcon = 4;
    string hostname = 5;
    string address = 6;
    string short_name = 7;
    // a2s
    A2S_Info a2s_info = 8;
    repeated A2S_Player a2s_player = 9;
}

message A2S_Info {
    int32 protocol = 1;
    string map = 2;
    string folder = 3;
    string game = 4;
    int32 id = 5;
    int32 players = 6;
    int32 max_players = 7;
    int32 bots = 8;
    int32 server_type = 9;
    int32 environment = 10;
    int32 visibility = 11;
    int32 vac = 12;
    string version = 13;

    int32 port = 14;
    int64 steam_id = 15;

    int32 source_tv_port = 16;
    string source_tv_name = 17;

    string keywords = 18;
    int64 game_id = 19;
}

message A2S_Player {
    string name = 1;
    int32 score = 2;
    float duration = 3;
}

// Message

message InitReq {
    string address = 1;
    int32 port = 2;
}

message InitResp {
    Info info = 1;
}

message InfoReq {
    int32 server_id = 1;
}

message InfoResp {
    Info info = 1;
}

message AllInfoReq {
    bool a2s = 1;
}

message AllInfoResp {
    repeated Info info = 1;
}

message RconReq {
    int32 server_id = 1;
    string cmd = 2;
}

message RconResp {
    string response = 1;
}

message RconAllReq {
    string cmd = 1;
}

message RconAllResp {
    int32 success = 1;
}

message ChangeMapNotifyReq {
    int32 server_id = 1;
    string map = 2;
}

message ChangeMapNotifyResp {
}


service Server {
    rpc Info (InfoReq) returns (InfoResp) {
        option (google.api.http) = {
            get: "/game/server/info/{server_id}"
        };
    }
    rpc AllInfo (AllInfoReq) returns (AllInfoResp) {
        option (google.api.http) = {
            get: "/game/server/allinfo"
        };
    }
    rpc Init (InitReq) returns (InitResp) {
        option (google.api.http) = {
            post: "/game/server/init"
            body: "*"
        };
    }
    rpc Rcon (RconReq) returns (RconResp) {
        option (google.api.http) = {
            post: "/game/server/rcon"
            body: "*"
        };
    }
    rpc RconAll (RconAllReq) returns (RconAllResp) {
        option (google.api.http) = {
            post: "/game/server/rcon/all"
            body: "*"
        };
    }
    rpc ChangeMapNotify (ChangeMapNotifyReq) returns (ChangeMapNotifyResp) {
        option (google.api.http) = {
            post: "/game/server/changemap"
            body: "*"
        };
    }
}